syntax = "proto3";

package hello;

// Definimos un servicio con una sola funci√≥n
service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
}

// Mensajes que viajan
message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}